ES|QL|DS: Close the encoding gap the previous suite recorded as a TODO
DataSourceCrudAcceptCombinationsIT carried this in its own javadoc: its text
fixtures were all ASCII, so its encoding axis verified the setting was accepted
and plumbed to the reader and never that it decoded anything. It named the fix
-- bytes valid in the declared charset and invalid as UTF-8, the copyright sign
in ISO-8859-1 -- and left it undone.

A case can now declare the charset its bytes are WRITTEN in, which is a
different question from the encoding the dataset declares, and an encoding case
is only meaningful when the two differ. The header carries 0xA9: read as
ISO-8859-1 the column is named with that character, and read as UTF-8 the byte
is invalid and the name carries a replacement character instead.

Also adds skip_rows over a two-line preamble, where the assertion is that the
header is the third line rather than the first.

105 test executions over 35 cases; 184 unit tests; precommit clean.